# gazebo-swarm

./: .gitignore  CMakeLists.txt  RAPPORT.md  RAPPORT_EN.md  README.md  launch_all.sh  run_swarm.sh  swarm_node.cpp
ros2_ws/: launch_swarm.sh  ros2_shell.sh  test_swarm.sh  watch_swarm.sh
ros2_ws/src/swarm_comm/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_comm/launch/: swarm_launch.py
ros2_ws/src/swarm_comm/src/: swarm_node.cpp
ros2_ws/src/swarm_comm/test/: test_election.py
ros2_ws/src/swarm_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_msgs/msg/: SwarmStatus.msg
ros2_ws/tools/: swarm_dashboard.py
worlds/: swarm_persistent.sdf
